# RCA-Engine

./: .dockerignore  .gitignore  ARCHITECTURE_NARRATIVE.md  CORRECTNESS_TEST_SUMMARY.md  CURSOR_FOR_DATA_ASSESSMENT.md  Cargo.toml  Dockerfile  E2E_TEST_RESULTS.md  ENV_SETUP.md  FINAL_TEST_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PRODUCTION_READINESS.md  REAL_WORLD_WORKFLOW_TEST_RESULTS.md  SIMPLIFIED_CORRECTNESS_VALIDATION.md  SIMPLIFIED_GUIDE.md  SIMPLIFIED_VS_COMPLEX_TEST_RESULTS.md  SUMMARY.md  TEST_VALIDATION_SUMMARY.md  USER_GUIDE_RCA.md  USER_JOURNEY.md  convert_parquet_to_csv.py  create_test_tables.rs  docker-compose.yml  load_scf.sh  load_scf_data.rs  load_tables_data.rs  package-lock.json  pull_latest.sh  push_to_github.sh  requirements.txt  run_agentic_rca.sh  start_kb_server.sh  start_server.sh  test_clarification_flow.py  test_components.py  test_integration.sh  test_recovery_tos_comparison.py  test_ui_flow.js  test_uuid_integration  test_uuid_output  (+1 more)
.cargo/: config.toml.temp
KnowledgeBase/: Cargo.toml  api_server.rs  business_term_resolver.rs  contract_extractor.rs  mod.rs  semantic_sync.rs  vector_store.rs
backend/: .dockerignore  app.py  app_production.py  conversational_context.py  dimension_resolver.py  enterprise_pipeline.py  hybrid_knowledge_retriever.py  join_learner.py  knowledge_base_client.py  knowledge_graph.py  knowledge_register_rules.py  llm_query_generator.py  metadata_ingestion_api.py  multi_stage_pipeline.py  natural_language_metadata_parser.py  node_level_metadata_accessor.py  orchestrator.py  package-lock.json  (+6 more)
backend copy/: server.js
(+361 files in other folders)
