[package]
name = "knowledge-base"
version = "0.1.0"
edition = "2021"

[lib]
name = "knowledge_base"
path = "mod.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strsim = "0.11"  # For fuzzy matching (Jaro-Winkler)
anyhow = "1"     # For error handling in optional modules

[features]
default = []
semantic-resolution = []  # Enable modules that require external schema registry

